# f1tenth_system

./: time_profiling_spinner.cpp  time_profiling_spinner.h
callback_profile/: CMakeLists.txt  package.xml
callback_profile/msg/: CallbackProfile.msg
f1tenth_stack/config/: sensors.yaml  vesc.yaml
f1tenth_stack/config/nichols_hall_map/: nichols_short_good_01.pgm  nichols_short_good_01.yaml  nichols_short_good_01_edited.pgm
f1tenth_stack/config/slam_toolbox_conf/: mapper_params_localization.yaml  mapper_params_online_async.yaml
f1tenth_stack/launch/: .bringup_launch.py.swp  bringup_launch.py
pure_pursuit/config/: config.yaml
pure_pursuit/launch/: pure_pursuit_launch.py
pure_pursuit/racelines/: nichols_raceline.csv
pure_pursuit/src/: pure_pursuit_node.cpp  waypoint_visualiser_node.cpp
raceline-optimization/: main_globaltraj_f110.py  requirements.txt
raceline-optimization/inputs/tracks/: nichols_short_good_01.csv
raceline-optimization/maps/: readme_nichols.txt
raceline-optimization/outputs/nichols_short_good_01/mintime-2023-10-01 14:50:36.019877/: accelerations.csv  controls.csv  lam_g0.csv  lam_x0.csv  states.csv  tire_forces.csv  w0.csv
raceline-optimization/params/: f110.ini
subm_patches/: teleop_tools.patch  vesc.patch
time_profiling_spinner/: CMakeLists.txt  package.xml  package.xml:Zone.Identifier
time_profiling_spinner/include/time_profiling_spinner/: time_profiling_spinner.h
time_profiling_spinner/src/: time_profiling_spinner.cpp
