<?xml version="1.0"?>
<package format="3">
  <name>time_profiling_spinner</name>
  <version>0.0.1</version>
  <description>The time_profiling_spinner package</description>

  <maintainer email="bakhbyergyen7@gmail.com">Bakhbyergyen Yerjan</maintainer>
  <license>MIT</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>callback_profile</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
